some changes made at my weekend

--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -73,42 +73,7 @@
         <span>Python</span>
         <span>React</span>
         <span>Tailwind</span>
-        <span>Node.js</span>
-        <span>JavaScript</span>
-        <span>HTML</span>
-        <span>CSS</span>
-        <span>Python</span>
-        <span>React</span>
-        <span>Tailwind</span>
-        <span>Node.js</span>
-        <span>JavaScript</span>
-        <span>HTML</span>
-        <span>CSS</span>
-        <span>Python</span>
-        <span>React</span>
-        <span>Tailwind</span>
-        <span>Node.js</span>  
-        <span>JavaScript</span>
-        <span>HTML</span>
-        <span>CSS</span>
-        <span>Python</span>
-        <span>React</span>
-        <span>Tailwind</span>
-        <span>Node.js</span>
-        <span>JavaScript</span>
-        <span>HTML</span>
-        <span>CSS</span>
-        <span>Python</span>
-        <span>React</span>
-        <span>Tailwind</span>
-        <span>Node.js</span>
-        <span>JavaScript</span>
-        <span>HTML</span>
-        <span>CSS</span>
-        <span>Python</span>
-        <span>React</span>
-        <span>Tailwind</span>
-        <span>Node.js</span>
+        
       </div>
       <div class="about-inner">
         
@@ -116,7 +81,13 @@
       </div>
     </section>
 
-    <section class="section gallery" id="projects">Projects</section>
+    <section class="section gallery" id="projects">
+      <canvas id="fluid-canvas"></canvas>
+      <div class="projects-content">
+        <h1 class="gradient">Projects</h1>
+        <p>Work in progress</p>
+      </div>
+    </section>
     <section class="section contact" id="contact">Contact</section>
   </div>
 
@@ -136,5 +107,6 @@
   </div>
 
   <script src="javascript.js"></script> 
+  <script src="canvas.js" defer></script>
 </body>
 </html>
